# rusty-twinkle-tray

./: Cargo.toml  License.md  Readme.md  app.manifest  build.rs  justfile  rustfmt.toml
.github/scripts/: validate-workflow.py
.github/workflows/: build-release.yml  build.yml  release.yml
assets/: app.manifest  ids.rs
lib/codegen/: Cargo.toml
lib/codegen/src/: attributes.rs  constructors.rs  exporter.rs  filter.rs  main.rs  utils.rs  whitelist.rs
lib/windows-ext/: Cargo.toml  Codegen.toml
lib/windows-ext/src/: lib.rs
lib/windows-ext/src/Windows/: mod.rs
lib/windows-ext/src/Windows/Foundation/: mod.rs
lib/windows-ext/src/Windows/Foundation/Collections/: mod.rs
lib/windows-ext/src/Windows/System/: mod.rs
lib/windows-ext/src/Windows/UI/: mod.rs
lib/windows-ext/src/Windows/UI/Core/: mod.rs
lib/windows-ext/src/Windows/UI/Input/: mod.rs
lib/windows-ext/src/Windows/UI/Text/: mod.rs
lib/windows-ext/src/Windows/UI/Xaml/: mod.rs
lib/windows-ext/src/Windows/UI/Xaml/Controls/: mod.rs
lib/windows-ext/src/Windows/UI/Xaml/Controls/Primitives/: mod.rs
lib/windows-ext/src/Windows/UI/Xaml/Hosting/: mod.rs
lib/windows-ext/src/Windows/UI/Xaml/Input/: mod.rs
lib/windows-ext/src/Windows/UI/Xaml/Interop/: mod.rs
lib/windows-ext/src/Windows/UI/Xaml/Media/: mod.rs
lib/windows-ext/src/Windows/Win32/: mod.rs
lib/windows-ext/src/Windows/Win32/Foundation/: mod.rs
lib/windows-ext/src/Windows/Win32/System/: mod.rs
lib/windows-ext/src/Windows/Win32/System/WinRT/: mod.rs
lib/windows-ext/src/Windows/Win32/System/WinRT/Xaml/: mod.rs
src/: backend.rs  config.rs  error.rs  interface.rs  logger.rs  main.rs  monitors.rs  mousehook.rs  power.rs  theme.rs  tray.rs  utils.rs  window.rs
src/backend/: mod.rs  proxy.rs
src/framwork/: buffer.rs  mod.rs
src/framwork/window/: class.rs  data.rs  mod.rs
src/runtime/: event.rs  executor.rs  mod.rs  reducing_spsc.rs  timer.rs  traits.rs
src/ui/: container.rs  controls.rs  mod.rs
src/utils/: elevation.rs  error.rs  extensions.rs  logger.rs  mod.rs  ordered_map.rs  panic.rs  runtime.rs  string.rs  winrt.rs
src/views/: flyout.rs  mod.rs  settings.rs
src/watchers/: display_change.rs  mod.rs  power.rs
src/windowing/: event_loop.rs  hotkey.rs  mod.rs  window.rs
