[package]
name = "rusty-twinkle-tray"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[workspace]
default-members = ["."]
members = [
    ".",
    "lib/codegen",
    "lib/windows-ext"
]

[dependencies]
log = "0.4"
windows-ext = { path = "lib/windows-ext" }
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_Debug",

    "Win32_Devices_Display",
]}

[build-dependencies]
embed-manifest = "1.4"