[package]
name = "rusty-twinkle-tray"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[workspace]
default-members = ["."]
members = [
    ".",
    "lib/codegen",
    "lib/windows-ext"
]

[dependencies]
log = "0.4"
betrayer = { git = "https://github.com/sidit77/betrayer.git" }
serde = { version = "1", features = ["derive", "rc"] }
ron = "0.8"
async-executor = "1.8"
flume = "0.11"
futures-lite = "2"
dunce = "1"
windows-ext = { path = "lib/windows-ext" }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Devices_Display",
    "Win32_System_Power",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_UI_HiDpi",
    "UI_ViewManagement"
]}

[build-dependencies]
# embed-manifest = "1.4"
tauri-winres = "0.1"
ico = "0.3"