[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-bindgen = "0.51"
rayon = "1"
walkdir = "2"
syn = "2"
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"