[package]
name = "windows-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-core = "0.51"
windows = {version = "0.51", features = [
    "Foundation",
    "Foundation_Collections",
    "UI",
    "UI_Text",
    "UI_Input"
]}
