[package]
name = "windows-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-core = "0.52"
windows = {version = "0.52", features = [
    "Win32_Foundation",
    "System",
    "Foundation",
    "Foundation_Collections",
    "UI",
    "UI_Core",
    "UI_Text",
    "UI_Input"
]}
